[tool.poetry]
name = "repl_python3_AI"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
termcolor = "^1.1.0"
Flask = "^2.0.2"
pandas = "^1.4.0"
plotly = "^5.5.0"
seaborn = "^0.11.2"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
